<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.example.recipe_app.FragmentHome"
        android:label="@string/fragment_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/home_to_search"
            app:destination="@id/search" />
        <action
            android:id="@+id/home_to_favourites"
            app:destination="@+id/favourites"/>
        <action
            android:id="@+id/home_to_trivia"
            app:destination="@+id/trivia"/>
    </fragment>
    <fragment
        android:id="@+id/search"
        android:name="com.example.recipe_app.FragmentRecipesSearch"
        android:label="@string/fragment_search_recipes"
        tools:layout="@layout/fragment_recipes_search"/>
    <fragment
        android:id="@+id/trivia"
        android:name="com.example.recipe_app.FragmentRandomFoodFacts"
        android:label="@string/trivia"
        tools:layout="@layout/fragment_random_food_facts" />
    <fragment
        android:id="@+id/favourites"
        android:name="com.example.recipe_app.FragmentFavourites"
        android:label="@string/favourites"
        tools:layout="@layout/fragment_favourites"/>

</navigation>